--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^12.29.0",
+    "@google/generative-ai": "^0.24.1",
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "prismjs": "^1.30.0",
     "react": "^19.2.0",
